# talks

./: .marp-talks  README_MARP.md  index.html
.github/workflows/: marp-pages.yml
2021/spire/: spire.html
2023/fastfilters/: fastfilter.html
2023/performance/: performance.html
2023/url/: euro.html
2024/HarveyMuddCollege/: HarveyMuddCollege.html
2025/sea/: sea2025.html  sea2025.md  sea2025_extra.md
2025/sea/plots/: apple.py  mlp.py  speculativelearning.py
2025/sea/software/: CMakeLists.txt  README.md
2025/sea/software/benchmarks/: bench_misses.cpp  bench_random.cpp  bench_speculative.cpp  bench_unroll.cpp  bench_utf16.cpp  delta.cpp  superscalar.cpp  utf16neon.h
css/: styles.css
scripts/: marpit.sh
